# Dastyar_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_server.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
agents/: main_agent.py
data_collection/apple_watch/: attribute_collector.py  comments.py  watch_collector.py
data_collection/iphone/: attribute_collector.py  comments.py  iphone_collector.py
databases/: database.py
models/: model.py
scripts/: build_vector_db.py  data_collector.py  test.py
services/: agent_creator.py  manage_sessions.py  rag_service.py
